src/Styles/settings.css
/* ... */
.modal.note-toolbar-setting-modal-container {

    & .note-toolbar-setting-item-top-container {
        display: flex;
        flex-flow: wrap;
        justify-content: space-between;
        & .setting-item {
            border-bottom: none;
        }
        & .note-toolbar-setting-item-icon {
            padding-top: 0;
            padding-bottom: 0;
            & .setting-item-info {
                display: none;
            }
            & .setting-item-control {
                margin-top: 0;
                border: dashed 1px;
                border-radius: var(--input-radius);
                border-color: var(--background-modifier-border);
                padding: var(--size-2-2);
                & .clickable-icon[data-note-toolbar-no-icon="true"] {
                    & svg {
                        filter: brightness(0.5);
                    }
                }
                & .clickable-icon:focus-within {
                    box-shadow: none;
                }
                &:focus-within {
                    border-radius: var(--input-radius);
                    box-shadow: 0 0 0 2px var(--background-modifier-border-focus);
                    transition: box-shadow 0.15s ease-in-out, border 0.15s ease-in-out;
                }
            }
        }
        & .note-toolbar-setting-item-label-tooltip {
            border-top: none;
            flex-grow: 1;
            padding-top: 0;
            padding-bottom: 0;
            .is-mobile & {
                padding-bottom: 0.75em;
            }
            & .setting-item-info {
                display: none;
            }
            & .setting-item-control {
                width: 100%;
                & input[type="text"] {
                    width: 100%;
                }
                .is-mobile & {
                    margin-top: 0;
                }
            }
        }
    }

    & .note-toolbar-setting-item-link-container {
        display: grid;
        grid-template-columns: 1fr 3fr;
        @media (max-width: 600px) {
            grid-template-columns: 1fr;
        }
        gap: 0.75em;
        width: 100%;
        & .setting-item {
            & .setting-item-info {
                display: none;
            }
            & .setting-item-control {
                justify-content: start;
                .is-mobile & {
                    margin-top: 0;
                }
            }
        }
    }

    & .note-toolbar-setting-item-link {
        width: 100%;
    }

    & .note-toolbar-setting-item-field-link {
        align-items: flex-start;
        border-top: none;
        flex-direction: column;
        gap: 0.5em;
        padding-top: 0;
        width: 100%;
        & .setting-item-info {
            display: none;
        }
        & .setting-item-control {
            align-items: flex-start;
            flex-direction: column;
            /* for the advanced settings gear */
            &.note-toolbar-setting-item-control-advanced {
                align-items: center;
                flex-direction: row
            }
        };
        & .setting-item-control, .search-input-container {
            width: 100%;
            & input[type="text"] {
                width: 100%;
            }
        }
        & textarea {
            height: 8rem;
            width: 100%;
        }
    }

    & .note-toolbar-setting-item-visibility-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: flex-end;
        & .setting-item {
            border-bottom: none;
        }
    }

    & .note-toolbar-setting-item-link-field,
    & .note-toolbar-setting-item-link-subfield {
        display: flex;
        flex-grow: 1;
        flex-wrap: wrap;
        gap: 0 1em;
        & .setting-item-info {
            display: none;
        }
        & .setting-item-control {
            .is-mobile & {
                margin-top: 0;
            }
        }
    }

    & .note-toolbar-setting-subfield-advanced-container {
        width: 100%;
    }

    & .setting-item.note-toolbar-setting-subfield-advanced-heading {
        align-items: center;
        display: flex;
        flex-direction: row;
        flex-grow: 1;
        flex-wrap: wrap;
        & .setting-item-info {
            display: initial;
            & .setting-item-name {
                cursor: pointer;
            }
        }
        & .setting-item-control {
            align-items: flex-end;
            width: auto;
            .is-mobile & {
                margin-top: 0;
            }
        }
    }

    & .note-toolbar-setting-item-link-advanced {
        display: none;
        &[data-active] {
            display: flex;
        }
        flex-direction: column;
        flex-grow: 1;
        gap: 1em;
        & .setting-group {
            .is-mobile & {
                border: var(--border-width) solid var(--background-modifier-border);
                border-radius: var(--radius-m);
            }
            & .setting-item-info {
                display: initial;
                & .setting-item-name {
                    font-size: var(--font-ui-small);
                }
            }
            & .setting-item-control {
                justify-content: end;
                .is-mobile & {
                    margin-top: 0;
                }
            }
        }
    }

}


.note-toolbar-setting-focussable-link {
    &:focus-within {
        box-shadow: var(--cg-nt-settings-link-focus-box-shadow);
    }
}
/* ... */

